// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders logged in correctly 1`] = `
<div
  className="mb-5 container-fluid"
>
  <div
    className="navigation-container row"
  >
    <div
      className="col"
    >
      <nav
        className="navbar navbar-expand-lg navbar-light"
      >
        <span
          className="pt-0 navbar-brand"
        >
          <img
            alt="logo"
            className="image--logo"
            src="/media/logo.svg"
          />
        </span>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          className="navbar-toggler"
          onClick={[Function]}
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
        <div
          aria-expanded={null}
          className="navbar-collapse collapse"
        >
          <div
            className="navbar-nav"
            onKeyDown={[Function]}
          >
            <a
              aria-current="page"
              className="nav--link-custom px-3 nav-link active"
              data-rb-event-key={null}
              disabled={false}
              href="/"
              onClick={[Function]}
              role="tab"
              style={Object {}}
              tabIndex={-1}
            >
              Home
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/recipes"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Recipes
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/recipe/editor"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Recipe Editor
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/flavors"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Flavors
            </a>
          </div>
          <div
            className="ml-auto navbar-nav"
            onKeyDown={[Function]}
          >
            <div
              className="nav--link-custom px-3 dropdown"
              onKeyDown={[Function]}
            >
              <a
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle"
                href="/"
                id="user-dropdown"
                onClick={[Function]}
              />
              <div
                className="dropdown-menu dropdown-menu-right"
              >
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/user/profile"
                  onClick={[Function]}
                >
                  Profile
                </a>
                <div
                  className="dropdown-divider"
                  role="separator"
                />
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/user/recipes"
                  onClick={[Function]}
                >
                  Recipes
                </a>
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/user/favorites"
                  onClick={[Function]}
                >
                  Favorites
                </a>
                <div
                  className="dropdown-divider"
                  role="separator"
                />
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/user/shopping-list"
                  onClick={[Function]}
                >
                  Flavor Stash
                </a>
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/user/shopping-list"
                  onClick={[Function]}
                >
                  Shopping List
                </a>
                <div
                  className="dropdown-divider"
                  role="separator"
                />
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/user/settings"
                  onClick={[Function]}
                >
                  Settings
                </a>
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/dashboard"
                  onClick={[Function]}
                >
                  Dashboard
                </a>
                <div
                  className="dropdown-divider"
                  role="separator"
                />
                <a
                  aria-current={null}
                  className="dropdown-item"
                  disabled={false}
                  href="/login"
                  onClick={[Function]}
                >
                  Logout
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`<Header /> renders logged out correctly 1`] = `
<div
  className="mb-5 container-fluid"
>
  <div
    className="navigation-container row"
  >
    <div
      className="col"
    >
      <nav
        className="navbar navbar-expand-lg navbar-light"
      >
        <span
          className="pt-0 navbar-brand"
        >
          <img
            alt="logo"
            className="image--logo"
            src="/media/logo.svg"
          />
        </span>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          className="navbar-toggler"
          onClick={[Function]}
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
        <div
          aria-expanded={null}
          className="navbar-collapse collapse"
        >
          <div
            className="navbar-nav"
            onKeyDown={[Function]}
          >
            <a
              aria-current="page"
              className="nav--link-custom px-3 nav-link active"
              data-rb-event-key={null}
              disabled={false}
              href="/"
              onClick={[Function]}
              role="tab"
              style={Object {}}
              tabIndex={-1}
            >
              Home
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/recipes"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Recipes
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/flavors"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Flavors
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/login"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Login
            </a>
            <a
              aria-current={null}
              className="nav--link-custom px-3 nav-link"
              data-rb-event-key={null}
              disabled={false}
              href="/register"
              onClick={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Register
            </a>
          </div>
          <div
            className="ml-auto navbar-nav"
            onKeyDown={[Function]}
          />
        </div>
      </nav>
    </div>
  </div>
</div>
`;
